log
Wed 08 May 2024 06:14:34 PM UTC: 
 tests:  1|8
total_score: 0/70
856021f
Wed 08 May 2024 06:19:01 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d3ba36
Wed 08 May 2024 06:19:22 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
4b2ff65
